--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -25,8 +25,8 @@
         android:layout_centerHorizontal="true"
         android:text="Powered by"
         android:textColor="#ffffff"
-        android:textStyle="bold|italic"
-        android:textSize="14dp"
+        android:textStyle="bold"
+        android:textSize="12dp"
         android:layout_above="@+id/splash_logo_mov5"
         android:layout_marginBottom="20dp"
         android:visibility="invisible"/>
@@ -73,10 +73,26 @@
             android:layout_marginRight="5dp"
             android:layout_marginEnd="5dp"/>
 
-        <ProgressBar
-            android:id="@+id/progress_splash_salao20"
+        <RelativeLayout
+            android:id="@+id/rl_progress"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+            <ProgressBar
+                android:id="@+id/progress_splash_salao20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_cloud_white_24dp"
+                android:layout_centerInParent="true"/>
+
+        </RelativeLayout>
+
+
 
     </LinearLayout>
 
