--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TableRow
+    <!--<TableRow
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
             android:layout_gravity="center_vertical">
         </Spinner>
 
-    </TableRow>
+    </TableRow>-->
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
